<resources>
    <string name="app_name">JangSisters</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="filter">filter</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porta faucibus nisi eu ornare. Fusce consequat, mauris id fringilla maximus, ligula velit luctus quam, et sodales nibh dui eget urna. Quisque accumsan, leo non lacinia convallis, nisl arcu iaculis mi, ut cursus ligula justo sit amet erat. Donec vehicula, orci sagittis luctus imperdiet, mauris sem tempor eros, vitae laoreet enim augue sed sapien. Aliquam et pellentesque arcu, nec sollicitudin urna. Curabitur maximus nibh vel lectus tristique, a bibendum turpis elementum. Pellentesque varius efficitur tortor vitae gravida. Etiam est ligula, scelerisque sed faucibus id, ullamcorper eu purus.

Vestibulum pulvinar, tortor non luctus lacinia, tortor dui pharetra elit, et malesuada metus odio at odio. Ut eget pellentesque urna, id euismod neque. Donec ut convallis elit. Sed sed ipsum ultrices, aliquam nisl molestie, laoreet ligula. Mauris sed felis arcu. Ut vel finibus ligula. Nullam lorem sem, sagittis vitae enim nec, facilisis gravida erat. Aliquam fringilla, orci eget volutpat congue, dui velit mollis erat, at auctor orci lectus vel lectus.

Phasellus commodo quam at ipsum ullamcorper ultricies. Aliquam malesuada congue ipsum, et consequat orci imperdiet nec. Maecenas efficitur lacus dapibus pharetra auctor. Fusce purus risus, consequat in dictum non, ornare eget arcu. In elit orci, convallis a risus at, condimentum malesuada sapien. Phasellus id lorem ex. Aliquam vestibulum aliquam lectus a elementum. Integer auctor tortor id quam volutpat dapibus. Vivamus quis nisi quis enim tempor tempor quis quis dolor. Praesent faucibus turpis id leo fringilla sodales. Praesent egestas semper turpis. Fusce vitae urna sit amet ante vestibulum tempus vel non libero. Proin porttitor turpis vitae neque dapibus, a sagittis erat sodales. Mauris iaculis urna ac orci mattis fringilla.

Sed tempor ornare nunc vel tempor. Phasellus consectetur venenatis purus, eget rhoncus purus ullamcorper a. Ut in ex dolor. Nunc vitae suscipit ipsum. Maecenas ac dolor mattis, gravida lectus quis, fringilla nulla. Etiam aliquam erat quis nisl dapibus, nec euismod leo ornare. Aliquam pretium molestie nisl ac tincidunt. Curabitur egestas tellus id nibh pellentesque, venenatis aliquet diam ultrices. Duis vel leo quis lorem mollis tempus eu eget neque. Ut lobortis molestie orci ut sollicitudin. Vestibulum urna tellus, sagittis ac placerat sodales, placerat ut sapien. Etiam pellentesque convallis ligula sit amet molestie. Suspendisse mollis, quam quis egestas eleifend, enim arcu dapibus nisi, eu venenatis risus sem quis dui.

Nam vehicula ex a efficitur aliquet. Quisque blandit et augue non malesuada. Integer non neque ex. Maecenas consectetur sodales ex, in porttitor magna luctus in. Praesent at ante id orci consequat viverra in vitae eros. Ut nibh lorem, aliquam eu egestas vitae, malesuada in nunc. Suspendisse arcu tortor, rutrum sit amet egestas eu, volutpat id justo. Nunc congue turpis diam, vitae pulvinar urna ullamcorper accumsan. Nullam ac fermentum tellus. Maecenas nec malesuada magna. Donec dolor ligula, lacinia eu metus pellentesque, dictum molestie arcu. Integer iaculis erat vel pretium tincidunt. Sed gravida quam id volutpat consectetur.</string>


    <string name="lorem_small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porta faucibus nisi eu ornare. Fusce consequat, mauris id fringilla maximus, ligula velit luctus quam, et sodales nibh dui eget urna.</string>
    <string name="bookmark">bookmark</string>
    <string name="like">like</string>
    <string name="comment">comment</string>
    <string name="cart">cart</string>
    <string name="back">back</string>
    <string name="forward">forward</string>
    <string name="refresh">refresh</string>
    <string name="separator">|</string>
    <string name="help_text">Here goes some random text saying we value our customers and blablabla and we want them to be happy and blablabla</string>
    <string name="help">Help Chat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="not_have_account_registrate">Not have account? Sign up</string>
    <string name="logout">logout</string>
    <string name="settings">settings</string>
    <string name="balance">Balance</string>
    <string name="not_signed">Soryan, you are not signed it. You can create new accout or sign in using existing one</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
